# stellar_anomaly_detector

./: .gitignore  CLAUDE.md  INTERFACE.md  README.md  ROADMAP.md  enhanced_stellar_detector.py  gaia_queryTest.py  pyproject.toml  requirements.txt  stellar_anomaly_detector.py
stellar_anomaly_detector.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
stellar_detector/: __init__.py  cli.py
stellar_detector/analysis/: __init__.py  dimensionality.py  ensemble.py  hr_diagram.py  kinematics.py  ml_pipeline.py  persistence.py  spectral.py  stellar_lifetime.py  technosignature.py  variability.py
stellar_detector/core/: __init__.py  constants.py  models.py
stellar_detector/data/: __init__.py  cross_match.py  fetcher.py  preprocessing.py
stellar_detector/gui/: __init__.py  analysis_config.py  catalog_browser.py  dashboard.py  data_table.py  galactic_3d.py  interactive_hr.py  job_manager.py  light_curve_viewer.py  main_window.py  property_inspector.py  sky_map.py  theme.py  workers.py
stellar_detector/models/: __init__.py  stellar_evolution.py
stellar_detector/utils/: __init__.py  annotations.py  export.py  io.py  logging_config.py  session.py
stellar_detector/visualization/: __init__.py  plots.py
tests/: conftest.py  test_analysis.py  test_cross_match.py  test_io.py  test_models.py  test_preprocessing.py
