[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stellar-anomaly-detector"
version = "6.0.0"
description = "Advanced stellar anomaly detector and technosignature search engine"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    # Core scientific stack
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.11.0",
    "matplotlib>=3.7.0",

    # Astronomy
    "astropy>=5.3.0",
    "astroquery>=0.4.7",

    # Machine learning
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",

    # GUI
    "PySide6>=6.5.0",
    "pyqtgraph>=0.13.0",
]

[project.optional-dependencies]
advanced = [
    "umap-learn>=0.5.0",
    "hdbscan>=0.8.30",
    "coniferest>=0.0.16",
    "openTSNE>=1.0.0",
    "shap>=0.43.0",
    "tensorflow>=2.14.0",
    "plotly>=5.18.0",
    "seaborn>=0.13.0",
    "networkx>=3.2.0",
    "duckdb>=0.9.0",
    "pyastronomy>=0.21.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-qt>=4.2.0",
    "ruff>=0.1.0",
]

[project.scripts]
stellar-detector = "stellar_detector.cli:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"
